Tweaked alignment and fixed some internal page links

--- a/staging/css/stylish-portfolio.css
+++ b/staging/css/stylish-portfolio.css
@@ -36,7 +36,9 @@ body {
 
 p {
     max-width: 500px;
+    text-align:justify;
 }
+
 
 /* Custom Button Styles */
 
@@ -178,6 +180,9 @@ hr.small {
 .header-crystal {
     background: url(../img/crystal2.jpg) no-repeat center center scroll;
 }
+
+
+
 
 /* About */
 
